outline not displaying correctly on mobile

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -19,10 +19,10 @@
 }
 
 .search__input > input:focus {
-  outline-width: 0;
+  outline: none;
 }
 
-.search__inputIcon {
+.searc .search__inputIcon {
   color: gray;
 }
 
